--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-simple-toast": "^1.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1",
+    "react-navigation-hooks": "^1.1.0",
     "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
