--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-native-community/async-storage": "^1.8.0",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/stack": "^5.0.9",
+    "axios": "^0.19.2",
+    "query-string": "^6.11.1",
+    "querystring": "^0.2.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
