--- a/ios/iplGaming.xcodeproj/xcshareddata/xcschemes/iplGaming.xcscheme
+++ b/ios/iplGaming.xcodeproj/xcshareddata/xcschemes/iplGaming.xcscheme
@@ -37,8 +37,8 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
@@ -65,16 +65,6 @@
          </BuildableReference>
       </MacroExpansion>
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "iplGamingTests.xctest"
-               BlueprintName = "iplGamingTests"
-               ReferencedContainer = "container:iplGaming.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
