--- a/package.json
+++ b/package.json
@@ -1,46 +1,41 @@
 {
-  "name": "iplGaming",
-  "version": "0.0.1",
-  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.8.0",
-    "@react-native-community/masked-view": "^0.1.6",
-    "@react-navigation/stack": "^5.0.9",
-    "axios": "^0.19.2",
-    "query-string": "^6.11.1",
-    "querystring": "^0.2.0",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
+    "expo": "~38.0.8",
+    "expo-status-bar": "^1.0.2",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-web": "~0.11.7",
+    
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.10",
     "react-native-simple-toast": "^1.0.0",
-    "react-native-spinkit": "^1.5.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1",
     "react-navigation-hooks": "^1.1.0",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation-tabs": "^2.7.0",
+    "@react-native-community/async-storage": "^1.8.0",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/stack": "^5.0.9",
+    "axios": "^0.19.2",
+    "query-string": "^6.11.1",
+    "querystring": "^0.2.0"
+    
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^0.0.7",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.8.0",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.9.0"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "~8.1.0"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "private": true
 }
